# cm-data-transformation

./: .gitignore  README.md  example.py  pyproject.toml
dbt/: dbt_project.yml  generate_dbt_macros.py
dbt/macros/: add_with_overlap.sql  aggregate_by_region.sql  aggregate_within_buffer.sql  filter_by_overlap.sql  filter_within_distance.sql  find_nearest_avg.sql  find_nearest_n.sql  generate_buffer.sql  generate_grid_h3.sql  generate_grid_within_h3.sql  schema.yml
dbt/macros/agg/: aggregate_by_buffer.sql  aggregate_by_grid_h3.sql  aggregate_by_region.sql  aggregate_by_union.sql
dbt/macros/cluster/: cluster_by_distance.sql
dbt/macros/enrich/: enrich_by_nearest.sql  enrich_by_overlap.sql
dbt/macros/filter/: filter_by_distance.sql  filter_by_overlap.sql
dbt/macros/find/: find_nearest_avg.sql  find_nearest_n.sql
docs/: dbt_macro_usage.md  dbt_macros_docs.md  operations_methods_documentation.md  operations_methods_documentation_en.md  usage_documenation.md
pipelines/: catchment_analysis.yaml  location_evaluation.yaml  mhd.py  pipeline.yaml  test_prefect.py
pipelines/sql/: admin_cm.sql  gtfs_od_matrix.sql  h3_cm.sql  poi_reachability.sql  stops_cm.sql
sql/: custom.sql
src/cm_data_transformation/: db.py  operations.py  runner.py  validator.py
tests/: .pytest.toml  .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pytest_transformation_report.html  test.sql  test__add.py  test__agg.py  test__filter.py  test__find.py  test__gen.py  test__sql.py
tests/dbt_packages/: cm_dbt_macros
tests/models/: sources.yml
(+47 files in other folders)
